--- a/testing.ipynb
+++ b/testing.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "testing.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNnYWKMrx1r3dpQ6Aozztod",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +38,7 @@
       "source": [
         "print('test')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -53,7 +52,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zhrljoL1UluI"
+        "id": "zhrljoL1UluI",
+        "outputId": "cc37bfba-2e9d-4be4-a29a-09446759d5eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print('test2')"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "test2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3vn9DJHrU69L"
       },
       "source": [
         ""
